Mesh Insert-Function' important improve quest. #38186

Closed
opened 2014-01-13 10:32:11 +01:00 by Danyang Yi · 12 comments

System Information
win7 sp1 64bit

Blender Version
Using 2.69.8
Note a crash bug. Just a improve quest.

Short description of error
Insert can have a better result. Check the attchment image. Please.

Exact steps for others to reproduce the error
Insert can have a better result. Check the attchment image. Please.

insert.jpg

insert.blend

**System Information** win7 sp1 64bit **Blender Version** Using 2.69.8 Note a crash bug. Just a improve quest. **Short description of error** Insert can have a better result. Check the attchment image. Please. **Exact steps for others to reproduce the error** Insert can have a better result. Check the attchment image. Please. ![insert.jpg](https://archive.blender.org/developer/F67678/insert.jpg) [insert.blend](https://archive.blender.org/developer/F67682/insert.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @yang2018

Added subscriber: @yang2018

This issue was referenced by blender/blender-addons-contrib@5611fb6a32

This issue was referenced by blender/blender-addons-contrib@5611fb6a32551d36ebf11e71f4b76559044a2e2c

This issue was referenced by 5611fb6a32

This issue was referenced by 5611fb6a32551d36ebf11e71f4b76559044a2e2c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 5611fb6a32.

Closed by commit 5611fb6a32.
Author

Thanks for you hard work :)

Thanks for you hard work :)
Author

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Author

Hi! @ideasman42 . Check the new attachments please.

This's a basic important information for make insert best.

Thanks agian.

insert_wishes.jpg

insert_wishes.blend

Hi! @ideasman42 . Check the new attachments please. This's a basic important information for make insert best. Thanks agian. ![insert_wishes.jpg](https://archive.blender.org/developer/F68943/insert_wishes.jpg) [insert_wishes.blend](https://archive.blender.org/developer/F68945/insert_wishes.blend)
Author

Maybe give us a choice between "almost" and "better".

Maybe give us a choice between "almost" and "better".

@yang2018 - strange, this is what I get with inset - default settings
screen.png

tested 0f0995fe4e

@yang2018 - strange, this is what I get with inset - default settings ![screen.png](https://archive.blender.org/developer/F69364/screen.png) tested 0f0995fe4e
Author

2.69.9 Hash:348cf17 is OK.

That's Great! You're the best!

2.69.9 Hash:348cf17 is OK. That's Great! You're the best!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38186
No description provided.